bug fixes: get schedule creation working
